# gitsum

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  generate_config.sh  migrate_to_gitea.sh
.github/workflows/: publish.yaml
src/: config.rs  git_ops.rs  index.html  main.rs
